--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lyricx
 description: "High-performance Android lyrics app with automatic music detection"
 publish_to: 'none'
-version: 1.1.0+2
+version: 1.0.1+3
 
 environment:
   sdk: ^3.11.0
@@ -47,6 +47,9 @@ dependencies:
   
   # JSON
   json_annotation: ^4.9.0
+
+  # Screen
+  wakelock_plus: ^1.4.0
 
 dev_dependencies:
   flutter_test:
