--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: lyricx
 description: "High-performance Android lyrics app with automatic music detection"
 publish_to: 'none'
-version: 1.0.1+3
+version: 1.1.0+4
 
 environment:
   sdk: ^3.11.0
@@ -22,6 +22,7 @@ dependencies:
   # Network
   dio: ^5.7.0
   connectivity_plus: ^6.1.1
+  http: ^1.2.0
   
   # Local Storage - using shared_preferences for simpler caching
   shared_preferences: ^2.3.3
